translation cs PanelPro 2 part 2018-01-07

--- a/java/src/jmri/jmrit/display/DisplayBundle_cs.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_cs.properties
@@ -355,7 +355,7 @@ LowerWestToUpperEast = Z doln\u00ed z\u00e1padn\u00ed na horn\u00ed v\u00fdchodn
 UpperWestToLowerEast = Z horn\u00ed z\u00e1padn\u00ed na doln\u00ed v\u00fdchodn\u00ed
 LowerWestToLowerEast = Z doln\u00ed z\u00e1padn\u00ed na doln\u00ed v\u00fdchodn\u00ed
 UpperWestToUpperEast = Z horn\u00ed z\u00e1padn\u00ed na horn\u00ed v\u00fdchodn\u00ed
-Slip = Kombinovan\u00e9 v\u00fdhybky
+Slip = K\u0159i\u017eovatkov\u00e1 v\u00fdhybka
 DoubleSlip = K\u0159i\u017eovatkov\u00e1 v\u00fdhybka
 SingleSlip = Polovi\u010dn\u00ed k\u0159i\u017eovatkov\u00e1 v\u00fdhybka
 ThreeWay = Dvojit\u00e1 v\u00fdhybka
