--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_cs.properties
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutEditorBundle_cs.properties
@@ -75,7 +75,6 @@ Memory = Popiska pam\u011bti
 MemoryButtonToolTip = Pro p\u0159id\u00e1n\u00ed {0} klikn\u011bte a sou\u010dasn\u011b stiskn\u011bte kl\u00e1vesu Shift.
 MemoryToolTip = Zadejte n\u00e1zev prom\u011bnn\u00e9 pam\u011bti kter\u00fd bude zobrazen v nov\u00e9 popisce pam\u011bti.
 BlockContentsButtonToolTip = Pro p\u0159id\u00e1n\u00ed popisky bloku klikn\u011bte a sou\u010dasn\u011b stiskn\u011bte kl\u00e1vesu Shift.
-#BlockContentsToolTip = Enter name of block variable to be displayed in a new block label.
 MultiSensorToolTip = Pro p\u0159id\u00e1n\u00ed v\u00edcen\u00e1sobn\u00e9ho sn\u00edma\u010de klikn\u011bte a sou\u010dasn\u011b stiskn\u011bte kl\u00e1vesu Shift.
 IconChecksClickLabel = Vybrat ikonu klikem:
 ButtonAddAdditionalSensor = P\u0159idat dal\u0161\u00ed sn\u00edma\u010d
@@ -84,69 +83,71 @@ ButtonCreateIcon = Vytvo\u0159it ikonu na panelu
 IconChangeInfo = <html>Vyberte novou ikonu ze souboru,<br>potom v n\u00e1hledu naho\u0159e klikn\u011bte na ikonu pro jej\u00ed zm\u011bnu.</html>
 SetIconButton = Vyb\u011br ikony...
 
-ChangeIcons = Change Icons
-ChangeIconToolTip = Select to change icons used to represent Sensors, Signal Heads or Label (whichever is checked at the right).
-ChangeIconNotApplied = This only works when a Sensor, Signal Head or\nLabel is selected to the right of this button.
-SensorIcon = Sensor Icon
-SensorButtonToolTip = Select to add a Sensor icon when next clicking with shift down.
-SensorIconToolTip = Enter name of Sensor represented by a new Sensor icon.
-SignalIconToolTip = Enter name of Signal Head represented by a new signal head icon.
-SignalIcon = Signal Head Icon
-SignalButtonToolTip = Select to add a Signal Head icon when next clicking with shift down.
-SignalMastIcon = Signal Mast Icon
-SignalMastButtonToolTip = Select to add a Signal Mast icon when next clicking with shift down.
-IconsTitle = Icons
-IconLabel = Icon Label
-IconLabelToolTip = Select to add a general purpose icon when next clicking with shift down.
-Slip = Slip
-Type = Type:
-Rotation = Rotation:
-Rotate = Rotate
-RotationToolTip = <html>Enter clockwise rotation<br>for turnout (degrees).</html>
-SecondName = Additional Name
-TurnoutNameToolTip = Enter name of physical turnout.
-SecondTurnoutNameToolTip = Enter name of second physical turnout.
-StateToolTip = Select turnout state corresponding to continuing route.
-ContinuingState = Continuing Route Turnout State
-ConnectingBlock = Connecting Block
-BlockID = Block Name:
-BlockIDToolTip = Enter name of Block for new turnout, level crossing, or track segment.
-HighlightSelectedBlockTitle = Highlight
-HighlightSelectedBlockToolTip = Check to highlight the selected block on the layout
-BlockSensorName = Block Sensor Name
+ChangeIcons = Zm\u011bnit ikonu
+ChangeIconToolTip = Vyberte pro zm\u011bnu ikony sn\u00edma\u010de, n\u00e1v\u011bstn\u00edho \u0161t\u00edtu nebo popisky (podle toho co je za\u0161krtnuto vpravo).
+ChangeIconNotApplied = Toto funguje pouze tehdy, kdy\u017e vpravo od tohoto tla\u010d\u00edtka\nje vybr\u00e1n sn\u00edma\u010d, n\u00e1v\u011bstn\u00ed \u0161t\u00edt nebo popiska.
+SensorIcon = Ikona sn\u00edma\u010de
+SensorButtonToolTip = Pro p\u0159id\u00e1n\u00ed ikony sn\u00edma\u010de klikn\u011bte a sou\u010dasn\u011b stiskn\u011bte kl\u00e1vesu Shift.
+SensorIconToolTip = Zadejte n\u00e1zev sn\u00edma\u010de kter\u00fd je reprezentov\u00e1n novou ikonou sn\u00edma\u010de.
+SignalIconToolTip = Zadejte n\u00e1zev n\u00e1v\u011bstn\u00edho \u0161t\u00edtu kter\u00fd je reprezentov\u00e1n novou ikonou n\u00e1v\u011bstn\u00edho \u0161t\u00edtu.
+SignalIcon = Ikona n\u00e1v\u011bstn\u00edho \u0161t\u00edtu
+SignalButtonToolTip = Pro p\u0159id\u00e1n\u00ed ikony n\u00e1v\u011bstn\u00edho \u0161t\u00edtu klikn\u011bte a sou\u010dasn\u011b stiskn\u011bte kl\u00e1vesu Shift.
+SignalMastIcon = Ikona n\u00e1v\u011bstidla
+SignalMastButtonToolTip = Pro p\u0159id\u00e1n\u00ed ikony n\u00e1v\u011bstidla klikn\u011bte a sou\u010dasn\u011b stiskn\u011bte kl\u00e1vesu Shift.
+IconsTitle = Ikony
+IconLabel = Ikona popisky
+IconLabelToolTip = Pro p\u0159id\u00e1n\u00ed ikony v\u0161eobecn\u00e9ho pou\u017eit\u00ed klikn\u011bte a sou\u010dasn\u011b stiskn\u011bte kl\u00e1vesu Shift.
+Slip = K\u0159i\u017eovatkov\u00e1 v\u00fdhybka
+Type = Typ:
+Rotation = Oto\u010den\u00ed:
+Rotate = Oto\u010dit
+RotationToolTip = <html>Zadejte oto\u010den\u00ed ve sm\u011bru hodinov\u00fdch ru\u010di\u010dek<br>pro v\u00fdhybku (stupn\u011b).</html>
+SecondName = Dopl\u0148kov\u00fd n\u00e1zev
+TurnoutNameToolTip = Zadejte n\u00e1zev fyzick\u00e9 v\u00fdhybky.
+SecondTurnoutNameToolTip = Zadejte n\u00e1zev druh\u00e9 fyzick\u00e9 v\u00fdhybky.
+StateToolTip = Zadejte polohu v\u00fdhybky pro cestu na hlavn\u00ed kolej.
+ContinuingState = Poloha v\u00fdhybky na hlavn\u00ed kolej
+ConnectingBlock = Spojovac\u00ed \u00fasek
+BlockID = N\u00e1zev kolejov\u00e9ho \u00faseku:
+BlockIDToolTip = Zdejte n\u00e1zev kolejov\u00e9ho \u00faseku pro novou v\u00fdhybku, k\u0159i\u017eovatku nebo \u00faseku koleje.
+HighlightSelectedBlockTitle = Zv\u00fdraznit
+HighlightSelectedBlockToolTip = Za\u0161krtn\u011bte pro zv\u00fdrazn\u011bn\u00ed vybran\u00e9ho \u00faseku ve sch\u00e9matu koleji\u0161t\u011b
+BlockSensorName = N\u00e1zev sn\u00edma\u010de kolejov\u00e9ho \u00faseku 
 
-OccupancySensorToolTip = Enter name of occupancy sensor for this block; no entry means don't change.
-BlockContentsLabel = Block Contents
-Track = Track
-Location = Location
-Nodes = Track Nodes
-EditIcon = Change Icon
-EditSensorIcons = Change Sensor Icons
-EditSignalIcons = Change Signal Head Icons
+OccupancySensorToolTip = Zadejte n\u00e1zev sn\u00edma\u010de obsazen\u00ed pro tento kolejov\u00fd \u00fasek; \u017e\u00e1dn\u00fd z\u00e1pis znamen\u00e1 beze zm\u011bny.
+BlockContentsLabel = Obsah kolejov\u00e9ho \u00faseku
+Track = Kolej
+Location = Um\u00edst\u011bn\u00ed
+Nodes = Uzly koleje
+EditIcon = Zm\u011bnit ikonu
+EditSensorIcons = Zm\u011bnit ikonu sn\u00edma\u010de
+EditSignalIcons = Zm\u011bnit ikonu n\u00e1v\u011bstn\u00ed desky
 #IconChangeInfo = Select new file, then click on icon to change.
-Supporting = Supporting {0}:
-SupportingTurnout = Use Two Physical Addresses
-ThrowTwoTurnouts = Also Throw Turnout
-SecondTurnoutInvert = Invert Second Turnout
+Supporting = Podpora {0}:
+SupportingTurnout = Pou\u017eit\u00ed dvou fyzick\u00fdch adres
+ThrowTwoTurnouts = Tak\u00e9 p\u0159ehodit v\u00fdhybku
+SecondTurnoutInvert = Obr\u00e1tit druhou v\u00fdhybku
 
 # individual edit pane items
-EditTurnout = Edit Turnout
-EditXing = Edit Level Crossing
-EditSlip = Edit Slip
+EditTurnout = Upravit v\u00fdhybku
+EditXing = Upravit k\u0159i\u017eovatku
+EditSlip = Upravit k\u0159i\u017eovatkovou v\u00fdhybku
 #EditTrackSegment = Edit Track Segment # already in DisplayBundle.properties
-EditTurntable = Edit Turntable
-TurntableRadius = Turntable Radius
-TurntableRadiusHint = Enter radius (screen units) of turntable circle.
-TurntableDCCControlled = DCC Controlled Turntable
-TurnoutState = Set State
+EditTurntable = Upravit to\u010dnu
+TurntableRadius = Polom\u011br to\u010dny
+TurntableRadiusHint = Zadejte polom\u011br (jednotky obrazovky) kruhu to\u010dny
+TurntableDCCControlled = DCC \u0159\u00edzen\u00e1 to\u010dna
+TurnoutState = Nastavit stav
 
 #Turntable pop up items
-Ray = Ray
-RayAngle = Ray Track Angle
-AddRayTrack = New Ray Track
-DeleteRayTrack = Delete Ray Track
-RayAngleHint = Enter angle of Ray Track to add or delete (12 o'clock = 0, 3 o'clock = 90 degrees, etc.).
-AddRayTrackHint = Select to add a new Ray Track at the angle entered above.
+Ray = Paprsek
+RayAngle = \u00dahel paprsku koleje
+AddRayTrack = Nov\u00fd paprsek koleje
+DeleteRayTrack = Vymazat paprsek koleje
+RayAngleHint = Zadejte \u00fahel paprsku koleje pro p\u0159id\u00e1n\u00ed nebo vymaz\u00e1n\u00ed (12 hodin = 0, 3 hodiny = 90 stup\u0148\u016f, atd.)
+AddRayTrackHint = Vyberte pro p\u0159id\u00e1n\u00ed nov\u00e9ho paprsku koleje v \u00fahlu zadan\u00e9m v\u00fd\u0161e.
+
+// TODO
 DeleteRayTrackHint = Select to delete the Ray Track closest to the angle entered above.
 Unconnected = Unconnected Ray
 Connected = Connected to
