update SPROG help, install, screen shots, links fix some other hardware help page markup add separator to SPROG menus fix SPROG bundle dialog

--- a/java/src/jmri/jmrix/sprog/SprogBundle_nl.properties
+++ b/java/src/jmri/jmrix/sprog/SprogBundle_nl.properties
@@ -29,7 +29,7 @@ StatusConnectedToBootloader = Verbonden met bootloader versie {0}
 StatusUnableToConnectBootloader = Kan geen verbinding maken met bootloader
 StatusBadReplyWriteRequest = Fout antwoord op schrijfverzoek
 ErrorFrameDialogTitle = Verbinden met Bootloader
-ErrorFrameDialogString = Misvormd antwoord van bootloader./nIs de firmware ontgrendeld?
+ErrorFrameDialogString = Misvormd antwoord van bootloader.\nIs de firmware ontgrendeld?
 StatusBadBootloaderReply=Ongeldig antwoord op "set boot" commando.
 # Next 2 are currently (4.7) commented out in update.SPROGIIUpdateFrame:
 #StatusBadReplyErase = Bad reply to erase command
