improve BDL16x pane layout using GridLayout add Dutch translation

--- a/java/src/jmri/jmrix/loconet/bdl16/BDL16x_nl.properties
+++ b/java/src/jmri/jmrix/loconet/bdl16/BDL16x_nl.properties
@@ -1,8 +1,8 @@
-# Properties for internationalizing the JMRI BDL16x Configuration tool
+# Dutch properties for the JMRI BDL16x Configuration tool
 #
-# author: B. Milhaupt (C) 2017
+# author: Egbert Broerse 2018
 
-STATUS_TEXT_BOARD_MODE = The BDL16x should be in its normal mode. (Do not push any of the buttons on the BDL16x!)
+STATUS_TEXT_BOARD_MODE = De BDL16x moet in normale modus blijven. (Druk niet op de knopjes op de BDL16x!)
 
 COMBOBOX_TEXT_OPSW01_THROWN = Direct Home rail wiring (default)
 COMBOBOX_TEXT_OPSW03_THROWN = Normal polarity for detection (default)
@@ -34,17 +34,17 @@ COMBOBOX_TEXT_OPSW43_CLOSED_OPSW44_CLOSED = Extra added transponding "anti-chatt
 
 COMBOBOX_TEXT_OPSW40_THROWN = Do not force reset to factory defaults (default)
 
-ButtonTextReadFullSheet = Read Full Sheet
-ToolTipButtonTextReadFullSheet = Read all OpSws from selected device
-ButtonTextWriteFullSheet = Write Full Sheet
-ToolTipButtonTextWriteFullSheet = Write all OpSws to the selected device
-LabelBoardID = Board ID:
+ButtonTextReadFullSheet = Lees hele blad
+ToolTipButtonTextReadFullSheet = Lees alle OpSws uit op de geselecteerde module
+ButtonTextWriteFullSheet = Schrijf hele blad
+ToolTipButtonTextWriteFullSheet = Schrijf alle OpSws naar de geselecteerde module
+LabelBoardID = Module ID:
 LabelX = OpSw{0}:
-LabelXY = OpSw{0} and OpSw{1}:
+LabelXY = OpSw{0} en OpSw{1}:
 
-TitledBorderLabelBdl168Only = Options for BDL168 Only
-TitledBorderLabelAllBoards = Options for BDL16, BDL162, and BDL168
-TitledBorderLabelBdl162Bdl168Boards = Options for BDL162 and BDL168 Only
+TitledBorderLabelBdl168Only = Optie enkel voor BDL168
+TitledBorderLabelAllBoards = Opties voor BDL16, BDL162 en BDL168
+TitledBorderLabelBdl162Bdl168Boards = Opties voor BDL162 en BDL168
 
 COMBOBOX_TEXT_OPSW01_CLOSED = Common rail wiring
 COMBOBOX_TEXT_OPSW03_CLOSED = Reverse polarity for detection
