--- a/java/src/jmri/jmrix/loconet/bdl16/BDL16x_nl.properties
+++ b/java/src/jmri/jmrix/loconet/bdl16/BDL16x_nl.properties
@@ -1,65 +1,61 @@
 # Dutch properties for the JMRI BDL16x Configuration tool
 #
-# author: Egbert Broerse 2018
+# Translation by Egbert Broerse 2018
 
-STATUS_TEXT_BOARD_MODE = De BDL16x moet in normale modus blijven. (Druk niet op de knopjes op de BDL16x!)
+STATUS_TEXT_BOARD_MODE = > De BDL16x moet in normale modus blijven (Druk dus niet op het knopje op de BDL16x)
 
-COMBOBOX_TEXT_OPSW01_THROWN = Direct Home rail wiring (default)
-COMBOBOX_TEXT_OPSW03_THROWN = Normal polarity for detection (default)
-COMBOBOX_TEXT_OPSW05_THROWN = Disable transponding
-COMBOBOX_TEXT_OPSW06_THROWN = RX4 is present (default)
-COMBOBOX_TEXT_OPSW07_THROWN = RX4 is present (default)
-COMBOBOX_TEXT_OPSW09_THROWN = Detection reports "occupied" when zone power is off (default)
-COMBOBOX_TEXT_OPSW10_THROWN = Section 16 is a normal detection section (default)
-COMBOBOX_TEXT_OPSW11_THROWN = Allow this BDL16x to be LocoNet master
-COMBOBOX_TEXT_OPSW12_THROWN = Allow this BDL16x to terminate LocoNet
-COMBOBOX_TEXT_OPSW13_THROWN = Delay 5 seconds at power up (default)
-COMBOBOX_TEXT_OPSW19_THROWN = Normal (22K ohm) detection threshold (default)
-COMBOBOX_TEXT_OPSW25_THROWN = BDL16x LEDs show occupancy status (default)
-COMBOBOX_TEXT_OPSW26_THROWN = Decode switch commands from RailSync (default)
-COMBOBOX_TEXT_OPSW36_THROWN = GPON message and Interrogate messages triggers interrogation report (default)
-
-COMBOBOX_TEXT_OPSW37_THROWN_OPSW38_THROWN = Disable detection section off delay (BDL168 only) (default)
-COMBOBOX_TEXT_OPSW37_THROWN_OPSW38_CLOSED = Disable detection section off delay (BDL168 only)
-COMBOBOX_TEXT_OPSW37_CLOSED_OPSW38_THROWN = Long detection section off delay (BDL168 only)
-COMBOBOX_TEXT_OPSW37_CLOSED_OPSW38_CLOSED = Extra-long detection section off delay (BDL168 only)
-
-COMBOBOX_TEXT_OPSW39_THROWN = Disable verbose transponder tracking (BDL168 only) (default)
-COMBOBOX_TEXT_OPSW42_THROWN = Ignore first interrogate after power-up (BDL168 only) (default)
-
-COMBOBOX_TEXT_OPSW43_THROWN_OPSW44_THROWN = Standard transponding "anti-chatter" filtering (BDL168 only) (default)
-COMBOBOX_TEXT_OPSW43_THROWN_OPSW44_CLOSED = Standard transponding "anti-chatter" filtering (BDL168 only)
-COMBOBOX_TEXT_OPSW43_CLOSED_OPSW44_THROWN = Added transponding "anti-chatter" filtering (BDL168 only)
-COMBOBOX_TEXT_OPSW43_CLOSED_OPSW44_CLOSED = Extra added transponding "anti-chatter" filtering (BDL168 only)
-
-COMBOBOX_TEXT_OPSW40_THROWN = Do not force reset to factory defaults (default)
+COMBOBOX_TEXT_OPSW01_THROWN = Direct Home aansluiting (standaard)
+COMBOBOX_TEXT_OPSW03_THROWN = Normale polariteit bezetmelding (standaard)
+COMBOBOX_TEXT_OPSW05_THROWN = Transponding uitgeschakeld
+COMBOBOX_TEXT_OPSW06_THROWN = RX4 transponding detector aangesloten (standaard)
+COMBOBOX_TEXT_OPSW07_THROWN = RX4 transponding detector aangesloten (standaard)
+COMBOBOX_TEXT_OPSW09_THROWN = Bezetmelding meldt "bezet" indien spanningsloos (standaard)
+COMBOBOX_TEXT_OPSW10_THROWN = Sectie 16 werkt als normale bezetmelding (standaard)
+COMBOBOX_TEXT_OPSW11_THROWN = BDL16x is LocoNet Master (enkel voor niet-LocoNet)
+COMBOBOX_TEXT_OPSW12_THROWN = BDL16x levert LocoNet-terminatie (enkel voor niet-LocoNet)
+COMBOBOX_TEXT_OPSW13_THROWN = Vertraging 5 s na inschakelen (standaard)
+COMBOBOX_TEXT_OPSW19_THROWN = Normale detectiedrempel 22 kOhm (standaard)
+COMBOBOX_TEXT_OPSW25_THROWN = BDL16x LEDs tonen bezetmeldstatus (standaard)
+COMBOBOX_TEXT_OPSW26_THROWN = Vertaal schakelcommando\u2019s van RailSync (standaard)
+COMBOBOX_TEXT_OPSW36_THROWN = GPON-berichten \u00e9n -oproepen activeren interrogatie-rapport (standaard)
+COMBOBOX_TEXT_OPSW37_THROWN_OPSW38_THROWN = Detectie-sectie vrijgeef-vertraging uit (standaard)
+COMBOBOX_TEXT_OPSW37_THROWN_OPSW38_CLOSED = Detectie-sectie vrijgeef-vertraging uit
+COMBOBOX_TEXT_OPSW37_CLOSED_OPSW38_THROWN = Lange detectie-sectie vrijgave-vertraging
+COMBOBOX_TEXT_OPSW37_CLOSED_OPSW38_CLOSED = Extra-lange detectie-sectie vrijgave-vertraging
+COMBOBOX_TEXT_OPSW39_THROWN = Beknopte transponder-opvolging (standaard)
+COMBOBOX_TEXT_OPSW42_THROWN = Negeer initi\u00eble opvraging na inschakelen (standaard)
+COMBOBOX_TEXT_OPSW43_THROWN_OPSW44_THROWN = Standaard transponding "anti-chatter" filter (standaard)
+COMBOBOX_TEXT_OPSW43_THROWN_OPSW44_CLOSED = Standaard transponding "anti-chatter" filter
+COMBOBOX_TEXT_OPSW43_CLOSED_OPSW44_THROWN = Extra transponding "anti-chatter" filter
+COMBOBOX_TEXT_OPSW43_CLOSED_OPSW44_CLOSED = Extra hoog transponding "anti-chatter" filter
+COMBOBOX_TEXT_OPSW40_THROWN = Geen Reset van instellingen (standaard)
 
 ButtonTextReadFullSheet = Lees hele blad
-ToolTipButtonTextReadFullSheet = Lees alle OpSws uit op de geselecteerde module
+ToolTipButtonTextReadFullSheet = Lees alle OpSws uit van de geselecteerde module
 ButtonTextWriteFullSheet = Schrijf hele blad
 ToolTipButtonTextWriteFullSheet = Schrijf alle OpSws naar de geselecteerde module
-LabelBoardID = Module ID:
-LabelX = OpSw{0}:
-LabelXY = OpSw{0} en OpSw{1}:
+LabelBoardID        = Module ID:
+LabelX              = OpSw{0}:
+LabelXY             = OpSw{0} en OpSw{1}:
 
-TitledBorderLabelBdl168Only = Optie enkel voor BDL168
+TitledBorderLabelBdl168Only = Meer opties voor BDL168
 TitledBorderLabelAllBoards = Opties voor BDL16, BDL162 en BDL168
-TitledBorderLabelBdl162Bdl168Boards = Opties voor BDL162 en BDL168
+TitledBorderLabelBdl162Bdl168Boards = Meer opties voor BDL162 en BDL168
 
-COMBOBOX_TEXT_OPSW01_CLOSED = Common rail wiring
-COMBOBOX_TEXT_OPSW03_CLOSED = Reverse polarity for detection
-COMBOBOX_TEXT_OPSW05_CLOSED = Enable transponding (default)
-COMBOBOX_TEXT_OPSW06_CLOSED = Must not be this setting when RX4 is connected!
-COMBOBOX_TEXT_OPSW07_CLOSED = Must not be this setting when RX4 is connected!
-COMBOBOX_TEXT_OPSW09_CLOSED = Detection reports "unoccupied" when zone power off
-COMBOBOX_TEXT_OPSW10_CLOSED = Section 16 is used to sense zone power
-COMBOBOX_TEXT_OPSW11_CLOSED = Do not allow BDL16x to be LocoNet master (default)
-COMBOBOX_TEXT_OPSW12_CLOSED = Do not allow BDL16x to terminate LocoNet (default)
-COMBOBOX_TEXT_OPSW13_CLOSED = Delay only 1/2 second at power up
-COMBOBOX_TEXT_OPSW19_CLOSED = High (10K ohm) DETECTION threshold
-COMBOBOX_TEXT_OPSW25_CLOSED = BDL16x LEDs show values from switch commands, not occupancy
-COMBOBOX_TEXT_OPSW26_CLOSED = Decode switch commands from LocoNet
-COMBOBOX_TEXT_OPSW36_CLOSED = Only interrogate messages trigger interrogation report
-COMBOBOX_TEXT_OPSW39_CLOSED = Enable verbose transponder tracking (BDL168 only)
-COMBOBOX_TEXT_OPSW42_CLOSED = Enable reply to initial power-on interogate (BDL168 only)
-COMBOBOX_TEXT_OPSW40_CLOSED = Restore factory default, including address
+COMBOBOX_TEXT_OPSW01_CLOSED = Common rail aansluiting
+COMBOBOX_TEXT_OPSW03_CLOSED = Keer polariteit voor bezetmelding om
+COMBOBOX_TEXT_OPSW05_CLOSED = Transponding ingeschakeld (standaard)
+COMBOBOX_TEXT_OPSW06_CLOSED = Geen RX4 aangesloten (controleer!)
+COMBOBOX_TEXT_OPSW07_CLOSED = Geen RX4 aangesloten (controleer!)
+COMBOBOX_TEXT_OPSW09_CLOSED = Bezetmelding meldt "vrij" indien spanningsloos
+COMBOBOX_TEXT_OPSW10_CLOSED = Sectie 16 werkt als spanningsmelder zone
+COMBOBOX_TEXT_OPSW11_CLOSED = BDL16x is geen LocoNet Master (standaard)
+COMBOBOX_TEXT_OPSW12_CLOSED = BDL16x zonder LocoNet-terminatie (standaard)
+COMBOBOX_TEXT_OPSW13_CLOSED = Vertraging 1/2 s na inschakelen
+COMBOBOX_TEXT_OPSW19_CLOSED = Hoge detectiedrempel(10 kOhm)
+COMBOBOX_TEXT_OPSW25_CLOSED = BDL16x LEDs tonen waarde van commando\u2019s i.p.v. bezetmelding
+COMBOBOX_TEXT_OPSW26_CLOSED = Vertaal schakelcommando\u2019s van LocoNet
+COMBOBOX_TEXT_OPSW36_CLOSED = Alleen oproepen activeren interrogatie-rapport
+COMBOBOX_TEXT_OPSW39_CLOSED = Uitgebreide transponder-opvolging
+COMBOBOX_TEXT_OPSW42_CLOSED = Antwoord op initi\u00eble opvraging na inschakelen
+COMBOBOX_TEXT_OPSW40_CLOSED = Zet terug naar fabrieksinstellingen, incl. adres
