add Sim Mode option to connection config pane, stored in profile

--- a/java/src/jmri/jmrix/sprog/SprogBundle_nl.properties
+++ b/java/src/jmri/jmrix/sprog/SprogBundle_nl.properties
@@ -96,5 +96,8 @@ PiSprogNanoCSTitle = Pi-SPROG Nano Commandocentrale
 PiSprog1ProgrammerTitle = Pi-SPROG One Programmeerunit
 PiSprog1CSTitle = Pi-SPROG One Commandocentrale
 
+#SprogSimulator items
+SprogSimOption = Functioneert als
+
 # SprogTurnout (Add to table pane) item (no inputs)
 AddOutputEntryToolTip = vul een getal in van 1 t/m 2044.
