i18n File Locations tool + NL, DE

--- a/java/src/jmri/jmrit/Bundle_de.properties
+++ b/java/src/jmri/jmrit/Bundle_de.properties
@@ -171,6 +171,7 @@ StateIdle       = Fertig
 StateInitialized = Initialisiert
 InitDH163       = Initialisiere DH163 + Soundtraxx
 InitDH163Tooltip = Konfiguriere einen Lok mit einem DH163 und einem Dekoder der das gew\u00e4hlte Protokoll nicht unterst\u00fctzt
+NoProgrammerConnected = Keine Programmer angebunden
 UnexpectedID_Read = Unerwartete ID gelesen: {0}
 WriteCVFailed   = Fehler beim Schreiben von CV{0}={1}!
 
@@ -209,7 +210,18 @@ ErrorConvertHW="{0}" konnte nicht in eine g\u00fcltige Hardware Adresse \u00fcbe
 
 #Xml file validation action title
 XmlFileValidateAction = Verifiziere XML Datei
-NoProgrammerConnected = Keine Programmer angebunden
+
+# Xml file location action items
+ButtonOpenLocX      = \u00d6ffne {0}
+ButtonUserFilesLoc  = Nutzerdateienverzeichnis
+ButtonRosterLoc     = Lokparkdateiverzeichnis
+ButtonProfileLoc    = Profilverzeichnis
+ButtonSettingsLoc   = Einstellungenverzeichnis
+ButtonScriptsLoc    = Ablaufdateiverzeichnis
+ButtonProgramLoc    = Programmverzeichnis
+ButtonLogFilesLoc   = Logbuchdateiverzeichnis
+CurrentConfig       = Aktuelle Configurationsdatei:
+TempFilesLoc        = Ablageort Tempor\u00e4re Dateien:
 
 # AmpMeter items
 TrackCurrentMeterTitle = Anlagestromanzeige
