--- a/java/src/jmri/jmrit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/Bundle_nl.properties
@@ -2,7 +2,7 @@
 #
 # Dutch properties for the jmri.jmrit Tools menu and other common keys
 # and shared keys for all branches
-# Translation/vertaling Egbert Broerse 2017
+# Translation/vertaling Egbert Broerse 2017, 2018
 
 MenuTools = Gereedschap
 
@@ -164,7 +164,7 @@ setBackground   = Toon op:
 Checkers        = Ruitjes
 PanelBgColor    = Als Paneel
 
-#used in dualdecoder
+# used in dualdecoder
 IDnumber        = ID nummer {0}
 Legacy          = Oude versie
 StateReading    = Aan het lezen...
@@ -173,6 +173,7 @@ StateIdle       = Gereed
 StateInitialized = Ge\u00efnitialiseerd
 InitDH163       = Initialiseer DH163 + Soundtraxx
 InitDH163Tooltip = Configureer een Loc met een DH163 en een decoder die het gekozen protocol niet ondersteunt
+NoProgrammerConnected = Geen programmer aangesloten
 UnexpectedID_Read = Onverwachte ID gelezen: {0}
 WriteCVFailed = Schrijven van CV{0}={1} mislukt!
 
@@ -221,7 +222,18 @@ ErrorConvertHW          = Kan "{0}" niet converteren naar een geldig Hardware-ad
 
 #Xml file validation action title
 XmlFileValidateAction   = Valideer XML-bestand
-NoProgrammerConnected   = Geen programmer aangesloten
+
+# Xml file location action items
+ButtonOpenLocX      = Open {0}
+ButtonUserFilesLoc  = Locatie Gebruikersbestanden
+ButtonRosterLoc     = Locatie Loclijst
+ButtonProfileLoc    = Profiel-locatie
+ButtonSettingsLoc   = Instellingen-locatie
+ButtonScriptsLoc    = Scripts-locatie
+ButtonProgramLoc    = Programma-locatie
+ButtonLogFilesLoc   = Locatie Log-bestanden
+CurrentConfig       = Huidig Configuratiebestand:
+TempFilesLoc        = Locatie Tijdelijke bestanden:
 
 # AmpMeter items
 TrackCurrentMeterTitle  = Baanstroommeter
