Dispatcher and Display bundle edits NL move up hint on Transits pane

--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
@@ -135,7 +135,7 @@ AddNewTrainButtonHint = Prem per activar un Tren nou utilitzant la informaci\u00
 CancelButtonHint = Prem per sortir sense activar un nou tren.
 LoadButton = Carrega Informaci\u00f3 del Tren
 LoadButtonHint = Prem per carregar la informaci\u00f3 de tren pr\u00e8via (opcional).
-SaveButton = Desa Informaci\u00f3 del Tren
+SaveButton=Desa Informaci\u00f3 del Tren...
 SaveButtonHint = Prem per a desar la Informaci\u00f3 del tren (opcional).
 DeleteButton = Elimina...
 DeleteButtonHint = Prem per eliminar el fitxer previ d'Informaci\u00f3 del Tren.
