--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
@@ -134,7 +134,7 @@ AddNewTrainButtonHint = Cliquez pour activer un nouveau train en utilisant les i
 CancelButtonHint = Cliquez pour annuler sans activation d'un nouveau train.
 LoadButton = Charger Info Train
 LoadButtonHint = Cliquez pour charger l'information du train enregistr\u00e9 pr\u00e9c\u00e9demment (en option).
-SaveButton = Sauv Info Train 
+SaveButton=Sauv Info Train ...
 SaveButtonHint = Cliquez pour enregistrer les informations de train montr\u00e9 ci-dessous (en option).
 DeleteButton = Supp ...
 DeleteButtonHint = Cliquez pour supprimer un fichier d'information sur le train pr\u00e9c\u00e9demment enregistr\u00e9.
@@ -289,4 +289,4 @@ ms = ms
 minThrottleInterval = Intervalle Minimum R\u00e9gulateur
 minThrottleIntervalHint = Intervalle Minimum (en ms) entre les commandes r\u00e9gulateur, entre 20ms et 1000ms
 fullRampTime = Temps pour Rampe Enti\u00e8re
-fullRampTimeHint = Temps (en ms) pour que RAMP_FAST loco passe de 0% à 100%, entre 1,000ms et 20,000ms. 
+fullRampTimeHint = Temps (en ms) pour que RAMP_FAST loco passe de 0% \u00e0 100%, entre 1,000ms et 20,000ms. 
