--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_it.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_it.properties
@@ -133,7 +133,7 @@ AddNewTrainButtonHint = Click per attivare un nuovo treno utilizzando le informa
 CancelButtonHint = Click per annullare senza attivare un nuovo treno.
 LoadButton = Carica le informazioni del treno
 LoadButtonHint = Click per caricare informazioni sui treni precedentemente salvate (optional).
-SaveButton = Salva le informazioni del treno
+SaveButton=Salva le informazioni del treno...
 SaveButtonHint = Click per salvare le informazioni sui treni mostrato di seguito (optional).
 DeleteButton = Cancella...
 DeleteButtonHint = Click per cancellare un file salvato in precedenza con le informazioni sui treni.
