--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
@@ -1,7 +1,7 @@
 # DispatcherBundle_nl.properties
 #
 # Dutch properties for the jmri.jmrit.dispatcher GUI elements
-# Translation Egbert Broerse 2017
+# Translation Egbert Broerse 2017/2018
 
 TitleDispatcher  = Verkeersleider
 ActiveTrainTableTitle = Actieve Treinen
@@ -103,8 +103,8 @@ TrainBoxLabel = Trein
 TrainBoxHint = Kies de te activeren Trein uit de lijst.
 TrainFieldLabel = Treinnaam
 TrainFieldHint = Vul een Treinnaam in (5 - 15 tekens).
-DccAddressFieldLabel = DCC Adres
-DccAddressFieldHint = Vul het DCC Adres in van de Trein; vereist voor Automatisch Rijden.
+DccAddressFieldLabel = DCC-adres
+DccAddressFieldHint = Vul het DCC-adres in van de Trein; vereist voor Automatisch Rijden.
 TrainInTransit = Trein in geselecteerde Traject
 InTransitBoxHint = Selecteer om de Blokkeuzelijst aan te passen als de Trein zich in het gekozen Traject bevindt.
 StartingBlockBoxLabel = Vertreklocatie van Trein
@@ -141,9 +141,9 @@ DepartureTimeMinHint = Vul de vertrekminuten in (modelklokminuten 00-59)
 AddNewTrainButton = Voeg Nieuwe Trein toe
 AddNewTrainButtonHint = Klik om een nieuwe Trein aan te maken met de ingevoerde informatie.
 CancelButtonHint = Klik om te annuleren zonder activering van een Trein.
-LoadButton = Laad Trein Info
+LoadButton = Laad Trein-info
 LoadButtonHint = Klik om eerder opgeslagen Trein-information te laden (optioneel).
-SaveButton = Sla Trein-info op
+SaveButton=Sla Trein-info op...
 SaveButtonHint = Klik om ingevulde Trein-informatie op te slaan voor later gebruik (optioneel).
 DeleteButton = Wis...
 DeleteButtonHint = Klik om een eerder opgeslagen Trein-informatiebestand te wissen.
@@ -230,18 +230,18 @@ ExplainChoice = Kies het Baanvak dat volgt op "{0}".
 WarnCancel = Waarschuwing! Je hebt geannuleerd zonder keuze van Baanvak.\nJMRI zal proberen de keuze te maken.
 
 NoTransitsMessage = Kan Verkeersleider niet openen - geen Trajecten aanwezig in de tabel. Maak eerst Trajecten (en Secties) aan.
-NoResetMessage = Helaas is het geselecteerde Traject niet geconfigureerd voor Automatisch Rijden.\nMeer info hierover in de Traject Tabel help.
+NoResetMessage = Helaas is het geselecteerde Traject niet geconfigureerd voor Automatisch Rijden.\nMeer hierover in de Traject Tabel help.
 NoEntryBlocks = Het geselecteerde Traject bevat geen Vertrekblokken.
 AutoTurnoutsWarn = Zonder verbindingsinformatie uit Spoorplan Paneel kan het zijn dat niet alle Wissels\ncorrect gesteld zijn. Controleer bij het Toewijzen.
 
 Question1 = Baanvak is BESCHIKBAAR, maar BEZET.\nWil je de bezetmelding negeren en het Baanvak toch toewijzen?
-Question2 = Baanvak is BESCHIKBAAR, maar de Wissels naar het Baanvak zijn niet correct gesteld.\nWil je dit negeren en het Baanvak toch toewijzen?
+Question2 = Baanvak is BESCHIKBAAR, maar de Wissels naar het Baanvak zijn niet correct gesteld.\nNegeren en het Baanvak toch toewijzen?
 ButtonOverride = Wijs Toe
 #ButtonNo = (plain No) is in NamedBeanBundle
-Question3 = Er bestaat op deze locatie al een Trein-infobestand met de naam "{0}".\nWilje dat bestand vervangen?
+Question3 = Er bestaat op deze locatie al een Trein-infobestand met de naam "{0}".\nBestand vervangen?
 ButtonReplace = Vervang
-Question4 = Baanvak is BESCHIKBAAR en VRIJ, maar deze Actieve Trein\nheeft zijn vertrektijd nog niet bereikt.\nWilje de starttijd negeren en het Baanvak toch toewijzen?
-Question5 = Het toegewezen Baanvak "{0}" is BEZET. Wilje het toch vrijgeven? Dit kan een botsing veroorzaken.
+Question4 = Baanvak is BESCHIKBAAR en VRIJ, maar deze Actieve Trein\nheeft zijn vertrektijd nog niet bereikt.\nWil je de starttijd negeren en het Baanvak toch toewijzen?
+Question5 = Het toegewezen Baanvak "{0}" is BEZET.\nToch vrijgeven? Dit kan een botsing veroorzaken.
 ButtonRelease = Geef Baanvak vrij
 
 Message1 = Completeer (of annulleer) het Activeer Nieuwe Trein venster\nvoordat je een Actieve Trein uit dienst neemt.
@@ -250,7 +250,7 @@ Message2 = Completeer (of annulleer) het Activeer Nieuwe Trein venster\nvoordat 
 TrainWarn = Treinnaam uit bestand "{0}" is niet beschikbaar.
 TransitWarn = Trajectnaam uit bestand "{0}" is niet beschikbaar.
 FastClockWarn = Ten minste 1 Actieve Trein wacht op de\nmodelklok, maar klok loopt niet.\nWil je de modelklok starten?
-FastClockWarn2 = Ten minste 1 Actieve Trein heeft de\nmodelklk nodig voor zijn herstart, maar klok loopt niet.\nWil je de modelklok starten?
+FastClockWarn2 = Ten minste 1 Actieve Trein heeft de\nmodelklok nodig voor zijn herstart, maar klok loopt niet.\nWil je de modelklok starten?
 ButtonYesStart = Start JMRI Modelklok
 
 LayoutScale = Schaal van de Baan
@@ -285,13 +285,13 @@ Error27 = Kon Automatisch Rijden van Trein "{0}" niet activeren.\nNu ingesteld o
 Error28 = Kon geen Rijregelaar openen om Trein "{0}" \nautomatisch te bedienen. Nu ingesteld op Handmatig Rijden.
 Error33 = Automatisch Rijden aangevraagd, maar er is geen Spoorplan Paneel\ningevuld in Verkeersleider Opties. Deze Optie is verplicht voor Autom. Rijden.
 Error34 = Er zijn {0} fouten gevonden in de verbindingen tussen Baanvakken\nop dit Traject. Bekijk Console uitvoer voor details.
-Error35 = Automatisch Rijden aangevraagd, maar bezetmedling is niet ingevuld\nbij Verkeersleider Opties. Deze Optie is verplicht voor Autom. Rijden.
+Error35 = Automatisch Rijden aangevraagd, maar bezetmelding is niet ingevuld\nbij Verkeersleider Opties. Deze Optie is verplicht voor Autom. Rijden.
 Error36 = Er zijn {0} fouten opgetreden bij het controleren/instellen van Rijrichtingmelders\n in de seinlogica op dit Traject. Bekijk Console uitvoer voor details.
 Error39 = Auto-Toewijzen vereist verbinding met een Spoorplan Paneel\nmaar dat is niet ingevuld bij Verkeersleider Opties.\nStel eerst een Paneel in bij de Opties.
 Error40 = Aangevraagde DCC-adres "{0}" is al in gebruik voor een\nActieve Trein. Kies een andere adres.
 
 SupportVSDecoder = Ondersteun Virtual Sound Decoder Plaatsbepaling
-SupportVSDecoderBoxHint = Kies deze optie om Verkeersleider te gebruiken bij het plaatseb van treingeluiden door Virtual Sound Decoder
+SupportVSDecoderBoxHint = Kies deze optie om Verkeersleider te gebruiken bij het plaatsen van treingeluiden door Virtual Sound Decoder
 
 trustKnownTurnouts = Vertrouw Bekende Stand van Wissels
 trustKnownTurnoutsHint = Vertrouw eerder genoteerde stand van wissels op de baan, en herhaal de commando's niet.
