--- a/java/src/jmri/jmrit/display/DisplayBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_nl.properties
@@ -463,9 +463,9 @@ SignalMastIconLoadError2 = Symbool {0}\n  {1} \nvoor seinmast {2} werd niet inge
 SignalMastIconLoadErrorTitle = Symbolen-fout
 SignalMastLogic = Seinmastlogica
 
-DragOccupancyName = Sleep naam van element (Bezetmeldblok of Bezetmelder) naar het "{0}"veld.
+DragOccupancyName = Sleep naam van element (Bezetmeldblok of Bezetmelder) naar het "{0}"-veld.
 DetectionSensor = Bezetmelder
-DragErrorName = Sleep de naam van de Fout-terugmelder naar het "{0}"veld.
+DragErrorName = Sleep de naam van de Fout-terugmelder naar het "{0}"-veld.
 ClosePicklist = Sluit Keuzevenster
 noRowSelected = Kies een rij in de tabel om aan dit symbool een element to koppelen.
 
