--- a/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_nl.properties
+++ b/java/src/jmri/jmrit/beantable/SectionTransitTableBundle_nl.properties
@@ -51,10 +51,10 @@ Wait = Wacht op Herstart
 AddNextButton = Voeg volgend Baanvak toe
 DeleteSectionsButton = Verwijder Baanvakken uit Traject
 DeleteSectionsButtonHint = Verwijder alle in de tabel vermelde Baanvakken voor een andere invulling.
-PrimarySectionBoxHint = Selecteer een Baanvak uit de lijst en klik op [Voeg volgend Baanvak toe] om aan Traject toe te voegen.
+PrimarySectionBoxHint = Selecteer een Baanvak uit de lijst en klik op [Voeg volgend Hoofdbaanvak toe] om aan Traject toe te voegen.
 AlternateSectionBoxHint = Selecteer een Baanvak om als Nevenbaanvak toe te voegen.
 AddPrimaryButton = Voeg volgend Hoofdbaanvak toe
-AddPrimaryButtonHint = Klik om het links geselecteerde Baanvak  toe te voegen aan het Traject.
+AddPrimaryButtonHint = Klik om het links geselecteerde Baanvak toe te voegen aan het Traject.
 RemoveLastButton = Verwijder laatste Baanvak
 RemoveLastButtonHint = Klik om het laatste Baanvak uit de Traject-lijst te verwijderen.
 AddAlternateButton = Voeg toe als Nevenbaanvak
@@ -65,7 +65,7 @@ InsertAtBeginningBoxHint = Selecteer een Baanvak om aan het begin van dit Trajec
 InsertAtBeginningButton = Voeg in als eerste Baanvak
 InsertAtBeginningButtonHint = Klik om het links geselecteerde Baanvak als eerste Baanvak in dit Traject toe te voegen.
 LabelSeqNum = Volgnummer:
-SeqNumHint = Stel het volgnummer in van het te vervangen/verwijderen/toe te voegen Baanvak met onderstaande knoppen.
+SeqNumHint = Stel het volgnummer in van het - met onderstaande knoppen - te vervangen/verwijderen/toe te voegen Baanvak.
 ReplacePrimaryForSeqButton = Vervang Hoofdbaanvak (volgnummer)
 ReplacePrimaryForSeqButtonHint = Klik om - zo mogelijk - het Hoofdbaanvak met het ingestelde volgnummer te vervangen.
 DeleteAlternateForSeqButton = Wis Nevenbaanvak (volgnummer)
