Dispatcher NL additions, add existing tooltips, colon

--- a/java/src/jmri/jmrit/beantable/BeanTableBundle_nl.properties
+++ b/java/src/jmri/jmrit/beantable/BeanTableBundle_nl.properties
@@ -189,7 +189,7 @@ LightTurnoutControlDes = AAN als {0} in stand {1} komt.
 LightTimedOnControlDes = AAN gedurende {0} msec. als {1} naar stand {2} gaat.
 LightTwoSensorControlDes = AAN als {0} of {1} in stand {2} komt.
 
-LightCreateInst = Vul instellingen in en klik op [Maak nieuwe] om een nieuwe Lamp aan te maken.
+LightCreateInst = Vul instellingen in en klik op [Voeg toe] om een nieuwe Lamp aan te maken.
 LightUpdateInst = Pas instellingen aan en klik op [Werk bij] of klik [Annuleer].
 LightCreateFeedback = Nieuwe lamp(en) toegevoegd:
 LightUpdateFeedback = Lamp bijgewerkt:
