--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
@@ -218,7 +218,7 @@ ChoiceFrameTitle = Esculla Secci\u00f3 Seg\u00fcent
 ExplainChoice = Siusplau tria la Secci\u00f3 a Seguir {0}.
 WarnCancel = Advert\u00e8ncia! Has Cancel\u00b7lat enlloc de seleccionar una \nSecci\u00f3, l'ordinador escolllir\u00e0 per tu.
 
-NoTransitsMessage = No s'han trobat Circulacions - No es pot obrir el dispatcher. Siusplau afegeix Circulacions i torna-ho a provar.
+NoTransitsMessage = No s'han trobat Circulacions - No es pot obrir el dispatcher.\nSiusplau afegeix Circulacions i torna-ho a provar.
 NoResetMessage = La Circulaci\u00f3 seleccionada no est\u00e0 ajustada per a Circulaci\u00f3 \ncont\u00ednua. Mira l'Ajuda de la Taula de Circulacions per a m\u00e9s ajuda.
 NoEntryBlocks = La Circulaci\u00f3 seleccionada no t\u00e9 cap Bloc d'Entrada
 AutoTurnoutsWarn = Sense connectivitat des del panell de l'Editor de Maquetes, les agulles\npoden no estar ben posicionades. Siusplau revisa quan assignis.
