--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_da.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_da.properties
@@ -226,7 +226,7 @@ ChoiceFrameTitle = Choose Next Section
 ExplainChoice = Please choose the Section to follow {0}.
 WarnCancel = Warning! You cancelled without selecting a Section,\nso JMRI will try to make a selection.
 
-NoTransitsMessage = Cannot open Dispatcher - no Transits found. Please create Transits and try again.
+NoTransitsMessage = Cannot open Dispatcher - no Transits found.\nPlease create Transits and try again.
 NoResetMessage = Sorry, the selected Transit is not set up for continuous running.\nSee Transit Table help for more information.
 NoEntryBlocks = The Selected Transit doesn't have any Entry Blocks
 AutoTurnoutsWarn = Without connectivity from a Layout Editor panel, all turnouts\nmay not be set correctly. Please check when allocating.
