--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
@@ -216,7 +216,7 @@ ChoiceFrameTitle = Choisir la Section Suivante
 ExplainChoice = Choississez la Section \u00e0 suivre {0} .
 WarnCancel = Attention! Vous avez annul\u00e9 au lieu de s\u00e9lectionner une\nSection, aussi l'ordinateur choisira pour vous.
 
-NoTransitsMessage = Pas trouv\u00e9s de Transits - Ne peut pas ouvrir le Dispatcheur. S'il vous pla\u00eet ajoutez des Transits et r\u00e9essayez.
+NoTransitsMessage = Pas trouv\u00e9s de Transits - Ne peut pas ouvrir le Dispatcheur.\nS'il vous pla\u00eet ajoutez des Transits et r\u00e9essayez.
 NoResetMessage = D\u00e9sol\u00e9, le Transit s\u00e9lectionn\u00e9 n'est pas configur\u00e9 pour continuer\nla circulation. Voir la fen\u00eatre Tableau Transit  pour plus d'informations.
 NoEntryBlocks = Le Transit s\u00e9lectionn\u00e9 n'a pas de Canton Entr\u00e9e
 AutoTurnoutsWarn = sans connexion \u00e0 partir d'un panneau de l'\u00e9diteur de r\u00e9seau, tous les aiguillages\n ne peuvent pas \u00eatre r\u00e9gl\u00e9s correctement. S'il vous pla\u00eet v\u00e9rifier lors de l'attribution.
