--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ja_JP.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ja_JP.properties
@@ -119,7 +119,7 @@ ChoiceFrameTitle = Choose Next Section
 ExplainChoice = Please chose the Section to follow {0}.
 WarnCancel = Warning! You cancelled instead of selecting a\nSection, so computer will select for you.
 
-NoTransitsMessage = No Transits found - cannot open Dispatcher. Please add Transits and try again.
+NoTransitsMessage = No Transits found - cannot open Dispatcher.\nPlease add Transits and try again.
 NoResetMessage = Sorry, the selected Transit is not set up for continuous \nrunning. See Transit Table window help for more information.
 AutoTurnoutsWarn = Without connectivity from a layout editor panel, all turnouts\nmay not be set correctly. Please check when allocating.
 
