--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
@@ -41,7 +41,7 @@ OccupancyColumnTitle = Bezetstatus
 UseStatusColumnTitle = Gebruikstatus
 TrainTypeColumnTitle =  Trein-type
 TrainLengthColumnTitle = Treinlengte
-SectionLengthColumnTitle = Sectielengte
+SectionLengthColumnTitle = Baanvaklengte
 AllocateButton = Wijs Toe
 AllocatedSectionsTitle = Toegewezen Baanvakken
 AutoReleaseBoxLabel = Auto-vrijgeven
@@ -82,8 +82,8 @@ ShortNameBoxHint = <html>Selecteer om alleen de korte Treinnaam als Actieve Trei
   Anders wordt ook de Gebruikersnaam van het huidige Baanvak bij de Trein getoond.</html>
 NameInBlockBox = Zet Treinnaam in Vertrekblok
 NameInBlockBoxHint = Selecteer om een nieuwe Treinnaam automatisch als waarde in het Vertrekblok in te vullen.
-RosterInBlockBox = Zet Loc in Vertrekblok
-RosterInBlockBoxHint = Selecteer om de Loc automatisch als waarde in het Vertrekblok in te vullen.
+RosterInBlockBox = Zet Lok in Vertrekblok
+RosterInBlockBoxHint = Selecteer om de Lok automatisch als waarde in het Vertrekblok in te vullen.
 ExtraColorForAllocatedBox = Gebruik eigen kleur voor toegewezen Blokken
 ExtraColorForAllocatedBoxHint = Selecteer om onbezette Blokken in toegewezen Baanvakken in een afwijkende kleur op het Paneel te tonen.
 NameInAllocatedBlockBox = Plaats Treinnaam in toegewezen Blokken
@@ -105,7 +105,7 @@ TrainFieldLabel = Treinnaam
 TrainFieldHint = Vul een Treinnaam in (5 - 15 tekens).
 DccAddressFieldLabel = DCC-adres
 DccAddressFieldHint = Vul het DCC-adres in van de Trein; vereist voor Automatisch Rijden.
-TrainInTransit = Trein in geselecteerde Traject
+TrainInTransit = Trein binnen geselecteerde Traject
 InTransitBoxHint = Selecteer om de Blokkeuzelijst aan te passen als de Trein zich in het gekozen Traject bevindt.
 StartingBlockBoxLabel = Vertreklocatie van Trein
 StartingBlockBoxHint = Selecteer het Blok waar de Trein zich bij aanvang van het Traject bevindt.
@@ -113,6 +113,15 @@ DestinationBlockBoxLabel = Eindlocatie van Trein
 DestinationBlockBoxHint = Selecteer het Blok waar de Trein zich op het eind van het Traject bevindt.
 AutoRun = Automatisch Rijden
 AutoRunBoxHint = Selecteer om deze Trein automatisch door JMRI Verkeersleider te laten besturen.
+AllocateMethodLabel = Toewijzingsmethode
+AllocateMethodBoxHint = Aantal Baanvakken dat vooruit wordt toegewezen
+NumberOfBlocks = Aantal Baanvakken
+AsFarAsPos = Zo ver mogelijk
+ToSafeSections = Tot veilig Baanvak
+UseSpeedProfileLabel = Pas Snelheidsprofiel toe
+UseSpeedProfileHint = Alleen beschikbaar voor een Lok met Snelheidsprofiel
+StopBySpeedProfileAdjustLabel = Correctie:
+StopBySpeedProfileAdjustHint = Alleen als Stoppen Volgens Profiel 1500 normaal is; hogere waarden stoppen sneller.
 AllocateAllTheWay = Wijs zo ver als mogelijk toe aan Trein
 AllocateAllTheWayBoxHint = <html>Selecteer om zo ver mogelijk van Vertrek tot Eind toe te wijzen aan de Trein.<br>\
   Anders worden niet meer dan 3 Baanvakken vooruit toegewezen.</html>
@@ -122,8 +131,8 @@ ResetWhenDoneBoxHint = Selecteer voor doorlopend rijden, zodat na elke ronde aut
 ResetWhenDone = Reset op Eind (doorlopend rijden)
 ReverseAtEndBoxHint = Automatisch rijrichting omkeren op het geselecteerde Traject zodra het eind is bereikt.
 ReverseAtEnd = Omkeren op Eind (heen en weer rijden)
-PriorityLabel = Voorrang
-PriorityHint = Stel Prioriteit in: hoger = meer voorrang.
+PriorityLabel = Prioriteit
+PriorityHint = Stel Prioriteit in: hoe hoger, hoe eerder afgehandeld.
 DelayedStartNone = Geen Vertraging
 DelayedStartTimed = Tijdvertraging
 DelayedStartSensor = Terugmeldervertraging
@@ -141,9 +150,9 @@ DepartureTimeMinHint = Vul de vertrekminuten in (modelklokminuten 00-59)
 AddNewTrainButton = Voeg Nieuwe Trein toe
 AddNewTrainButtonHint = Klik om een nieuwe Trein aan te maken met de ingevoerde informatie.
 CancelButtonHint = Klik om te annuleren zonder activering van een Trein.
-LoadButton = Laad Trein-info
+LoadButton = Laad Trein-info...
 LoadButtonHint = Klik om eerder opgeslagen Trein-information te laden (optioneel).
-SaveButton=Sla Trein-info op...
+SaveButton = Sla Trein-info op...
 SaveButtonHint = Klik om ingevulde Trein-informatie op te slaan voor later gebruik (optioneel).
 DeleteButton = Wis...
 DeleteButtonHint = Klik om een eerder opgeslagen Trein-informatiebestand te wissen.
@@ -155,8 +164,8 @@ DeleteTrainTitle = Wis Trein-info Bestand
 EnterFileName = Voer een naam in voor het Trein-infobestand, bijv. 'SPThruFreight'.
 TrainTypeBoxLabel = Trein-type:
 TrainTypeBoxHint = Kies het type van deze Trein uit de lijst.
-SpeedFactorLabel = Loc Snelheidscorrectie:
-SpeedFactorHint = Voer een waarde in (10 - 150%) om de standaard snelheid van de Loc in deze Trein te calibreren.
+SpeedFactorLabel = Snelheidscorrectie Lok:
+SpeedFactorHint = Voer een waarde in (10 - 150%) om de standaard snelheid van de Lok in deze Trein te calibreren.
 MaxSpeedLabel = Standaard Maximumsnelheid:
 MaxSpeedHint = Voer een waarde in (10 - 150%) voor de maximumsnelheid van deze Trein.
 RampRateBoxLabel = Overgangstempo:
@@ -164,10 +173,10 @@ RampRateBoxHint = Kies hoe snel snelheidswijzigingen voor deze Trein worden volt
 ResistanceWheels = Alle wagens hebben weerstanden over de wielen
 ResistanceWheelsBoxHint = Kies deze optie als alle wagons in deze Trein Blokbezetmeldingen geven.
 RunInReverse = Rij omgekeerd
-RunInReverseBoxHint = Selecteer als de Loc in omgekeerde richting ("achteruit") over dit Traject moet rijden.
-SoundDecoder = Loc voorzien van sound decoder
+RunInReverseBoxHint = Selecteer als de Lok in omgekeerde richting ("achteruit") over dit Traject moet rijden.
+SoundDecoder = Lok voorzien van sound decoder
 SoundDecoderBoxHint = Selecteer deze optie als de Locdecoder geluidseffecten kan produceren.
-MaxTrainLengthLabel = Maximale Treinlengte:
+MaxTrainLengthLabel = Max. Treinlengte:
 MaxTrainLengthHint = Vul de maximumlengte in in ({0}) voor deze Trein voor gebruik op dit Traject.
 TerminateWhenDone = Haal uit dienst op einde
 
@@ -229,7 +238,7 @@ ChoiceFrameTitle = Kies volgende Baanvak
 ExplainChoice = Kies het Baanvak dat volgt op "{0}".
 WarnCancel = Waarschuwing! Je hebt geannuleerd zonder keuze van Baanvak.\nJMRI zal proberen de keuze te maken.
 
-NoTransitsMessage = Kan Verkeersleider niet openen - geen Trajecten aanwezig in de tabel. Maak eerst Trajecten (en Secties) aan.
+NoTransitsMessage = Kan Verkeersleider niet openen - Trajecten-tabel is leeg.\nMaak eerst Trajecten (en Baanvakken) aan.
 NoResetMessage = Helaas is het geselecteerde Traject niet geconfigureerd voor Automatisch Rijden.\nMeer hierover in de Traject Tabel help.
 NoEntryBlocks = Het geselecteerde Traject bevat geen Vertrekblokken.
 AutoTurnoutsWarn = Zonder verbindingsinformatie uit Spoorplan Paneel kan het zijn dat niet alle Wissels\ncorrect gesteld zijn. Controleer bij het Toewijzen.
@@ -283,9 +292,9 @@ Error25 = Ongeldige invoer voor bestandsnaam.\nVerzoek om Trein-info op te slaan
 Error26 = Verzocht om Reset op Eind, maar Traject "{0}"\nis hiervoor niet juist geconfigureerd. Kon Actieve Trein niet aanmaken. 
 Error27 = Kon Automatisch Rijden van Trein "{0}" niet activeren.\nNu ingesteld op Handmatig Rijden.
 Error28 = Kon geen Rijregelaar openen om Trein "{0}" \nautomatisch te bedienen. Nu ingesteld op Handmatig Rijden.
-Error33 = Automatisch Rijden aangevraagd, maar er is geen Spoorplan Paneel\ningevuld in Verkeersleider Opties. Deze Optie is verplicht voor Autom. Rijden.
+Error33 = Automatisch Rijden aangevraagd, maar er is geen Spoorplan Paneel\ningevuld in Verkeersleider Opties.\nDeze Optie is verplicht voor Automatisch Rijden.
 Error34 = Er zijn {0} fouten gevonden in de verbindingen tussen Baanvakken\nop dit Traject. Bekijk Console uitvoer voor details.
-Error35 = Automatisch Rijden aangevraagd, maar bezetmelding is niet ingevuld\nbij Verkeersleider Opties. Deze Optie is verplicht voor Autom. Rijden.
+Error35 = Automatisch Rijden aangevraagd, maar 'Baan met blokdetectie' is niet aangekruisd\nbij Verkeersleider Opties.\nDeze Optie is verplicht voor Automatisch Rijden.
 Error36 = Er zijn {0} fouten opgetreden bij het controleren/instellen van Rijrichtingmelders\n in de seinlogica op dit Traject. Bekijk Console uitvoer voor details.
 Error39 = Auto-Toewijzen vereist verbinding met een Spoorplan Paneel\nmaar dat is niet ingevuld bij Verkeersleider Opties.\nStel eerst een Paneel in bij de Opties.
 Error40 = Aangevraagde DCC-adres "{0}" is al in gebruik voor een\nActieve Trein. Kies een andere adres.
@@ -299,4 +308,4 @@ ms = millisecondes
 minThrottleInterval = Minimum Rijregelaar-interval
 minThrottleIntervalHint = Minimum interval (in millisecondes) tussen Rijregelaar commando's. Stel een waarde in tussen 20 en 1.000 ms.
 fullRampTime = Overgangstijd
-fullRampTimeHint = Tijd (in ms) waarin een Loc met Overgang "{0}" van 0% to 100% versnelt. Stel een waarde in tussen 1.000 ms to 20.000 ms. 
+fullRampTimeHint = Tijd (in ms) waarin een Lok met Overgang "{0}" van 0% to 100% versnelt. Stel een waarde in tussen 1.000 ms to 20.000 ms. 
