--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_it.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_it.properties
@@ -215,7 +215,7 @@ ChoiceFrameTitle = Scegli sezione successiva
 ExplainChoice = Si prega di scegliere la la Sezione a seguire {0}.
 WarnCancel = Attenzione! Hai annullato invece di selezionare una sezione \n, pertanto il computer seleziona per voi.
 
-NoTransitsMessage = Non trovati Transiti - non \u00e8 possibile aprire Dispatcher. Si prega di aggiungere Transiti e riprovare.
+NoTransitsMessage = Non trovati Transiti - non \u00e8 possibile aprire Dispatcher.\nSi prega di aggiungere Transiti e riprovare.
 NoResetMessage = Spiacenti, il Transito scelto non \u00e8 configurato per un funzionamento continuo. \n Per maggiori informazioni vedere la finestra aiuto nella tabella dei Transiti.
 NoEntryBlocks = Il Transito selezionato non ha nessun Blocco d'ingresso
 AutoTurnoutsWarn = Senza connessione ad un pannello di Layout Editor, tutti gli scambi \n potrebbero non essere impostati correttamente. Si prega di Spuntare al momento dell'assegnazione.
